# Smart_Stock_Light

./: .gitignore  .license_key  LIGHT_GUIDE.md  MarketTradeAlertLight.spec  README.md  app.py  config.json  debug_exe.bat  diag_tapo.py  generated_licenses.txt  gui.py  install_and_run.command  license_manager.py  main.py  main_gui.py  market_data_agent.py  market_trade_alert_light.py  product_manual_v2.md  product_strategy.md  pyproject.toml  requirements.txt  run_windows.bat  setup_and_run.sh  shared_config.py  smart_stock_light.py  stock_monitor.py  tapo_controller.py  test_bulb.py  test_yf.py  web_server.py
.github/workflows/: build_windows.yml  daily_health_check.yml  python-ci.yml
Release_MarketTradeAlertLight/: README.md  install_and_run.bat  install_log.txt  market_data_agent.py  market_trade_alert_light.py  requirements.txt  shared_config.py  stock_monitor.py  tapo_controller.py  web_server.py
Release_MarketTradeAlertLight/templates/: index.html
core/: config.py  monitor.py
devices/: controller.py  scanner.py
docs/: README.md  automation_portfolio.md  testing_theory_istqb.md  video_shooting_plan.md  video_titles_packaging.md
logs/: install_log.txt
scripts/: build_mac.py  build_windows.bat  install_and_run.bat  install_and_run.command  license_generator.py  setup_and_run.sh
static/: manifest.json
system/: instance.py  license.py  updater.py
templates/: index.html
tests/: run_e2e_ci.py  test_config.py  test_kasa_diag.py  test_monitor.py  test_ui.py  test_yf.py  verify_log.py
web/: server.py
website/: index.html
(+48 files in other folders)
